--- a/lessons.html
+++ b/lessons.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Surf Lessons | Pike&#039;s Surf Academy- Santa Barbara & Santa Cruz's Ultimate Surf Lessons  </title>
+<title>Surf Lessons | Pike&#039;s Surf School- Santa Barbara & Santa Cruz's Ultimate Surf Lessons  </title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Santa Barbara Surfing, learn to surf" />
 <meta name="description" content="James Pike has been teaching surfing lessons for over 12 years and is both CPR and First Aid Certified." />
@@ -71,10 +71,10 @@
     	
 <div id="righty">
          <h1 class="marketing_header19">About Lessons</h1>
-         <p class="topshow7"><span class="lightp">James Pike has been teaching surfing lessons for over 12 years and is CPR and First Aid Certified.</span>   Pike’s Surf Academy offers a friendly and fun setting to learn how to surf, so that anyone who lives in town or is passing thru, has a wonderful surfing experience.  This is a sport ANYONE and EVERYONE ages ( 4-77+ ) who has the call to try it.  This is your opportunity of a life time to learn how to ride a surfboard with style, in a comfortable setting and in the company of an expert.  Give the gift of surfing to yourself and your loved ones, and enjoy your first-time experience together!  Set up a surfing lesson today and learn how to surf with Pike!</p>
+         <p class="topshow7"><span class="lightp">James Pike has been teaching surfing lessons for over 12 years and is CPR and First Aid Certified.</span>   Pike’s Surf Academy offers a friendly and fun setting to learn how to surf, so that anyone who lives in town or is passing thru, has a wonderful surfing experience.  This is a sport for ANYONE and EVERYONE ages ( 4-77+ ) who have the call to try it.  This is your opportunity of a life time to learn how to ride a surfboard with style, in a comfortable setting with the company of an expert.  Give the gift of surfing to yourself and your loved ones, and enjoy your first-time experience together!  Set up a surfing lesson today and learn how to surf with Pike!</p>
 <h1 class="marketing_header2">Lesson Information:</h1>
 <p class="topshow7"><span class="lightp">Each private surfing lesson are 120 minutes (2 hours) long and includes:</span> wetsuits, surfboards with surfing leash and 1 0n 1, personalized learning environment with surfing instructor James Pike.
-Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfschool.com).  Please include your full name and the height’s and weight’s for the people in the surf lesson, as well as a good time and date that works for you. Pike’s Surf School accepts for payment of Cash and Checks (Please make checks payable to “Pike’s Surf School”).</p>
+Surf lessons can be set up by phone (805-698-7630) or email (pike.schoolofstyle@yahoo.com).  Please include your full name and the height and weight of the desired participants, as well as a good time and date that works for you. Pike’s Surf School accepts payment of Cash and Checks (Please make checks payable to “Pike’s Surf School”).</p>
 <h1 class="marketing_header2">Locations:</h1>
 <p class="topshow7"><span class="lightp">We currently offer surf lessons at the following two locations: Santa Barbara and Santa Cruz,</span> California. To book a surf lesson at any of these locations, please call (805-698-7630) or email pike.schoolofstyle@yahoo.com </p>
 
