--- a/pricing.html
+++ b/pricing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Pricing & Packages | Pike&#039;s Surf Academy- Santa Barbara & Santa Cruz's Ultimate Surf Lessons</title>
+<title>Pricing & Packages | Pike&#039;s Surf School- Santa Barbara & Santa Cruz's Ultimate Surf Lessons</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Surf lesson prices, best group surf lesson rates, invividual surf lessons, surf instruction santa barbara, surf instruction santa cruz" />
 <meta name="description" content="Pike's Surf School is a fun, friendly, and safe place to learn how to surf from an experienced industry professional" />
@@ -57,7 +57,7 @@
 
 
 <h1 class="marketing_header22">Pricing / Info:</h1>
- <p id="test1">Lessons are 2 hours (120 minutes) in length. Prices below reflect first-time lesson prices: Repeat lessons and additional time at request <br /><br /><span class="brightp">All lessons for the Santa Barbara, CA location</span> are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance (10 minutes) from the southern end of Santa Barbara and just 12 minutes north of Ventura.<br /><br /> <span class="lightp">All lessons for the Santa Cruz, CA location</span> are taught at a safe and friendly surf beach near Pleasure Point at the end of 41st street. Santa Cruz lessons have a maximum group size limit of two (2) people.  </p>
+ <p id="test1"><span class="lightp">All first-time lessons are 2 hours (120 minutes) in length. Prices below reflect first-time lesson prices: Repeat lessons and additional time at request. <span class="brightp">All lessons for the Santa Barbara, CA location</span> are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance (10 minutes) from the southern end of Santa Barbara and just 12 minutes north of Ventura. <span class="brightp">All lessons for the Santa Cruz, CA location</span> are taught at a safe and friendly surf beach near Pleasure Point at the end of 41st street. Santa Cruz lessons have a maximum group size limit of two (2) people.  </p>
 
 <div class="two_column7 float_l"><h1 class="righttitle2">Single </h1>
               <h4 class="pricedes">A Single Lesson!</h3> 
@@ -121,11 +121,25 @@
 
          
 <div id="directions"><h1 class="marketing_header26">Directions:</h1>
+<h1 class="marketing_header28">Santa Barbara Lessons:</h1>
 <p id="test1"><span class="greenp"> Directions from Santa Barbara:</span> If your coming from SB, take the 101 South Freeway then drive past Capinteria and take the Seacliff exit ( Exit 78).  Make a right at the stop sign, drive for 10 minutes south, you will past two state parks (Hobsons and Faria).  After you past the Faria State Park, you will park at the beginning of the w 500 yard gap in between the houses is, it comes up quickly after Faria State park,  this is Mondos Cove.  The meeting spot is the where the gap begins (west end), please pull safely to the middle of the highway and find parking on the left side of the road next to the railroad tracks.  Please be very careful for traffic and bicyclist when crossing the road.
 
 <br /> <br /><span class="greenp"> Directions from Ventura:</span> If your coming for Ventura way, take the State Beach exit after you past Ventura, do not miss it. Drive 5 minutes north, you will past Solimar state beach and then look for the 300 yard gap in between the houses.  This is Mondos Cove and the meeting spot is the west end of the gap, please park safely on the right hand side of the highway next to the railroad tracks.
 <br /> <br /><span class="bringp">Things to bring:</span> Wear your bathing suit under your clothes before you get to the beach and bring a towel, sun glasses, hat and sunblock (recommended Badger surf screen, can be brought at Whole Foods).  Please call or email the night before your lesson to confirm.  When it’s time to meet up at Mondo’s Cove and you are at the meeting spot, please give us a call to help you find your surf lesson quickly.</p>
+<h1 class="marketing_header29">Santa Cruz Lessons:</h1>
+
+<p id="test1">
+
+<br /> <br /><span class="greenp">Directions from coming north of Santa Cruz:</span> if you're coming from San Francisco you want to come over the hwy 17 and go south on hwy 1, get off at 41st exit. Make a right at the stop light and continue all the way down till it dead ends into a parking lot and you've made it to the surf spot.
+
+<br /> <br /><span class="greenp">Directions coming south of Santa Cruz:</span>  If you're coming south of Santa Cruz from the Monterey bay area, take HWY 1, the exit is 41st and when you get off the exit you want to make a left, follow 41st all the way down until it dead ends and you're at the surf spot, there's a parking lot right there.
+<br />For all you folks with GPS the address is 511 41st Ave, Santa Cruz, CA 95062–5204.
+<br /> <br /><span class="bringp">Things to bring:</span> Wear your bathing suit under your clothes before you get to the beach and bring a towel, sun glasses, hat and sunblock (recommended Badger surf screen, can be brought at Whole Foods).  Please call or email the night before your lesson to confirm.  When it’s time to meet up at Mondo’s Cove and you are at the meeting spot, please give us a call to help you find your surf lesson quickly.
+</p>
 </div>
+
+
+
 
          
 
