--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Photo Gallery | Pike&#039;s Surf Academy- Santa Barbara & Santa Cruz's Ultimate Surf Lessons</title>
+<title>Photo Gallery | Pike&#039;s Surf School- Santa Barbara & Santa Cruz's Ultimate Surf Lessons</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Surf lesson photos, Kelly Slater, Bobby Martinez, Santa Barbara" />
 <meta name="description" content="These photos capture the stoked feeling our customers experience after a surf lesson in Santa Barbara and Santa Cruz, California. Enjoy. " />
