--- a/thank-you.html
+++ b/thank-you.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title> Thank You! | Pike&#039;s Surf Academy- Santa Barbara & Santa Cruz's Ultimate Surf Lessons</title>
+<title> Thank You! | Pike&#039;s Surf School- Santa Barbara & Santa Cruz's Ultimate Surf Lessons</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 <meta name="description" content="Set up a surfing lesson today and learn how to surf with Pike!" />
